- DietPi-Drive_Manager | Services are not stopped directly at start of this script any more. Instead this is done only on critical tasks, e.g. transferring of DietPi userdata, the swapfile or RootFS. Further increased navigation speed by re-running the drive detection loop only when affecting changes have been made, and, by several other code enhancements.
- DietPi-Software | Deluge: Lowered UMask (007 => 002) to allow read access from e.g. custom Samba shares without "dietpi" user. Many thanks to @radsb for reporting the limited access: https://dietpi.com/phpbb/viewtopic.php?f=11&t=5847
- DietPi-Software | FFmpeg: On RPi, the new APT repo package will be installed, which now supports RPi hardware acceleration and is some subversion newer then the package hosted on dietpi.com: https://github.com/MichaIng/DietPi/issues/869#issuecomment-490047405
- DietPi-Software | Gitea: Current stable v1.8.X will be installed now and existing instances will be upgraded during DietPi-Update. Many thanks to @msongz for implementing this: https://github.com/MichaIng/DietPi/pull/2881
- DietPi-Software | myMPD: Current upstream version will be installed now and existing instances will be upgraded during DietPi-Update, which requires a config file reset. A backup to recover custom settings from will be created: https://github.com/MichaIng/DietPi/issues/2156#issuecomment-497513129
- DietPi-Software | O!MPD: Current upstream version will be installed now and existing instances will be upgraded during DietPi-Update. Existing config and database will be preserved. YouTube and Tidal support is added now by default. Many thanks to @ArturSierzant for giving valueable feedback and suggestions: https://github.com/MichaIng/DietPi/pull/2884
- DietPi-Software | Ampache: Reinstalls will now preserve existing configs and database.

Bug Fixes: