@@ -30,7 +30,7 @@
 	disable_error=1 G_CHECK_VALIDINT "$1" && TARGETMENUID=$1
 
 	# - Exit DietPi-Config when going back to previous menu?
-	if disable_error=1 G_CHECK_VALIDINT "$2"; then
+	if disable_error=1 G_CHECK_VALIDINT "$2" 1 1; then
 
 		EXITONBACK=$2
 		TEXT_MENU_BACK='Exit'
@@ -1192,10 +1192,73 @@ More info here: https://www.raspberrypi.org/forums/viewtopic.php?p=105008#p10500
 
 	}
 
+	# TARGETMENUID=19
+	Menu_AdvancedOptions_APT(){
+
+		apt-config dump Dir::{Cache,State} > apt_conf
+		local cache_enabled=$(grep -cim1 '^Dir::Cache::pkgcache "[^"]' apt_conf)
+		local cache_in_ram=$(grep -cim1 '^Dir::Cache "/tmp' apt_conf)
+		local lists_in_ram=$(grep -cim1 '^Dir::State "/tmp' apt_conf)
+		local archives_in_ram=0
+		(( $cache_in_ram )) && grep -q '^Dir::Cache::archives "[^/]' apt_conf || grep -q '^Dir::Cache::archives "/tmp' apt_conf && archives_in_ram=1
+
+		local cache_text='On disk'
+		(( $cache_in_ram )) && cache_text='In RAM'
+		(( $cache_enabled )) || cache_text='Disabled'
+
+		local lists_text='On disk'
+		(( $lists_in_ram )) && lists_text='In RAM'
+
+		local archives_text='On disk'
+		(( $archives_in_ram )) && archives_text='In RAM'
+
+		G_WHIP_MENU_ARRAY=(
+
+			'Reset' ': Reset to system defaults'
+			'APT cache' ": [$cache_text]"
+			'APT lists' ": [$lists_text]"
+
+		)
+		(( $cache_in_ram )) && G_WHIP_MENU_ARRAY+=('APT archives' ": [$archives_text]")
+
+		G_WHIP_BUTTON_CANCEL_TEXT='Back'
+		if G_WHIP_MENU 'APT cache: Speeds up apt-cache search/show/... command
+ - 50-100 MiB size, gets fully rewritten on every APT update\n
+APT lists: Release files, one each distro and component
+ - 50-100 MiB size, get individually rewritten if update available\n
+APT archives: Where APT downloads packages to for install
+ - Can temporarily consume much space on large APT installs
+ - Resets to disk if cache is set to disk
+\nPlease select an item to adjust:'; then
+
+			[[ $G_WHIP_RETURNED_VALUE == 'Reset' ]] && { /DietPi/dietpi/func/dietpi-set_software apt-cache reset; return 0; }
+
+			local item=${G_WHIP_RETURNED_VALUE#APT }
+			G_WHIP_MENU_ARRAY=(
+
+				'To disk' ": Move APT $item to disk"
+				'To RAM' ": Move APT $item to RAM"
+
+			)
+			[[ $item == 'cache' ]] && G_WHIP_MENU_ARRAY+=('Disable' ": Disable APT $item")
+
+			if G_WHIP_MENU 'Please select an option:'; then
+
+				local option=${G_WHIP_RETURNED_VALUE#To }
+				/DietPi/dietpi/func/dietpi-set_software apt-cache $item ${option,,}
+
+			fi
+
+		else
+
+			TARGETMENUID=3 # Return to Advanced Options	
+
+		fi
+
+	}
+
 	# TARGETMENUID=18
 	Menu_AdvancedOptions_Serial_UART(){
-
-		TARGETMENUID=18 # Return to this menu
 
 		declare -A aSTATE=()
 		G_WHIP_MENU_ARRAY=()
@@ -1277,6 +1340,9 @@ More info here: https://www.raspberrypi.org/forums/viewtopic.php?p=105008#p10500
 		local swap_size_text="$swap_size MB"
 		(( $swap_size )) || swap_size_text='[Off]'
 		G_WHIP_MENU_ARRAY=('Swapfile' ": [$swap_size_text | $swap_location]")
+
+		# APT cache
+		G_WHIP_MENU_ARRAY+=('APT cache' ': Manage APT cache/info storage')
 
 		# Time sync
 		local ntpd_mode_current=$(grep -m1 '^[[:blank:]]*CONFIG_NTP_MODE=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')
@@ -1381,6 +1447,10 @@ More info here: https://www.raspberrypi.org/forums/viewtopic.php?p=105008#p10500
 					/DietPi/dietpi/dietpi-drive_manager
 
 				fi
+
+			elif [[ $G_WHIP_RETURNED_VALUE == 'APT cache' ]]; then
+
+				TARGETMENUID=19
 
 			elif [[ $G_WHIP_RETURNED_VALUE == 'RTC mode' ]]; then
 
@@ -4838,6 +4908,10 @@ _EOF_
 			elif (( $TARGETMENUID == 18 )); then
 
 				Menu_AdvancedOptions_Serial_UART
+
+			elif (( $TARGETMENUID == 19 )); then
+
+				Menu_AdvancedOptions_APT
 
 			else
 
