@@ -13,12 +13,13 @@
 	FP_SCRIPT='/DietPi/dietpi/func/dietpi-set_software'
 	AVAIABLE_COMMANDS="
 Available commands:
-$FP_SCRIPT	locale			en_GB.UTF-8 / any other UTF-8 locale
-$FP_SCRIPT	allo			eth_dhcp / eth_static
+$FP_SCRIPT	locale			xx_XX.UTF-8 (eg: en_GB.UTF-8)
+$FP_SCRIPT	allo			eth_dhcp|eth_static [<address>] [<gateway>] [<netmask>] [<dns-nameserver>]
 $FP_SCRIPT	useradd			X=create user with name X and default permissions, using global DietPi password (dietpi)
 $FP_SCRIPT	userdel			X=delete user with name X
-$FP_SCRIPT	apt-mirror		url / default
-$FP_SCRIPT	ntpd-mode		[0-4] configures time sync mode (eg: daily/hourly/daemon)
+$FP_SCRIPT	apt-mirror		<url>|default
+$FP_SCRIPT	apt-cache		clean|reset|cache|lists|archives [disable|ram|disk]
+$FP_SCRIPT	ntpd-mode		[0-4] Time sync modes: 0=custom|1=boot|2=boot+daily|3=boot+hourly|4=daemon+drift
 $FP_SCRIPT	verify_dietpi.txt	Verifies dietpi.txt entries, adds missing entries if required
 $FP_SCRIPT	passwords		NULL=Prompt user to change DietPi related passwords | X=optional set X as global password for future dietpi-software installations and \"root\" + \"dietpi\" login passwords.
 $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi specific content, and, DietPi userdata directory for software installs
@@ -65,7 +66,7 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 	#/////////////////////////////////////////////////////////////////////////////////////
 	Locale_Main(){
 
-		if [[ $INPUT_MODE_VALUE =~ 'UTF-8' ]]; then
+		if [[ $INPUT_MODE_VALUE == *'.UTF-8' ]]; then
 
 			echo "$INPUT_MODE_VALUE UTF-8" > /etc/locale.gen
 
@@ -73,7 +74,7 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 			[[ $INPUT_MODE_VALUE != 'en_GB.UTF-8' ]] && echo 'en_GB.UTF-8 UTF-8' >> /etc/locale.gen
 
 			# - Remove exisiting settings that will break dpkg-reconfigure
-			[[ -f /etc/default/locale ]] && rm /etc/default/locale
+			[[ -f '/etc/default/locale' ]] && rm /etc/default/locale
 
 			G_RUN_CMD dpkg-reconfigure -f noninteractive locales
 
@@ -171,6 +172,107 @@ _EOF_
 		else
 
 			Unknown_Input_Mode
+
+		fi
+
+	}
+
+	#/////////////////////////////////////////////////////////////////////////////////////
+	# Set APT Cache
+	#/////////////////////////////////////////////////////////////////////////////////////
+	AptCache_Main(){
+
+		local fp='/etc/apt/apt.conf.d/99-dietpi-cache'
+
+		# Clean current cache before changing it, failsafe cleanup if custom dir was chosen before
+		apt-get clean
+
+		if [[ $INPUT_MODE_VALUE == 'reset' ]]; then
+
+			[[ -f $fp ]] && rm $fp
+			[[ -d '/tmp/apt' ]] && rm -R /tmp/apt
+			return 0
+
+		fi
+
+		[[ -f $fp ]] || echo '# Please use "dietpi-config" > "Advanded Options" > "APT Cache" to edit these settings.' > $fp
+
+		if [[ $INPUT_MODE_VALUE == 'clean' ]]; then
+
+			rm -Rf /tmp/apt /var/cache/apt /var/lib/apt/{lists,mirrors,periodic,cdroms.list}
+
+		elif [[ $INPUT_MODE_VALUE == 'cache' ]]; then
+
+			if [[ $INPUT_ADDITIONAL_1 == 'disable' ]]; then
+
+				G_CONFIG_INJECT 'Dir::Cache[[:blank:]]' 'Dir::Cache "/tmp/apt";' $fp
+				# Leave archives on disk by default
+				GCI_PRESERVE=1 G_CONFIG_INJECT 'Dir::Cache::archives[[:blank:]]' 'Dir::Cache::archives "/var/cache/apt/archives";' $fp
+				G_CONFIG_INJECT 'Dir::Cache::pkgcache[[:blank:]]' 'Dir::Cache::pkgcache "";' $fp
+				G_CONFIG_INJECT 'Dir::Cache::srcpkgcache[[:blank:]]' 'Dir::Cache::srcpkgcache "";' $fp
+				[[ -d '/var/cache/apt' ]] && rm -R /var/cache/apt
+
+			elif [[ $INPUT_ADDITIONAL_1 == 'ram' ]]; then
+
+				G_CONFIG_INJECT 'Dir::Cache[[:blank:]]' 'Dir::Cache "/tmp/apt";' $fp
+				GCI_PRESERVE=1 G_CONFIG_INJECT 'Dir::Cache::archives[[:blank:]]' 'Dir::Cache::archives "/var/cache/apt/archives";' $fp
+				sed -i '/pkgcache[[:blank:]]/d' $fp
+				[[ -d '/var/cache/apt' ]] && rm -R /var/cache/apt
+
+			elif [[ $INPUT_ADDITIONAL_1 == 'disk' ]]; then
+
+				sed -i '/^Dir::Cache/d' $fp
+				[[ -d '/tmp/apt' ]] && rm -R /tmp/apt
+
+			fi
+
+		elif [[ $INPUT_MODE_VALUE == 'lists' ]]; then
+
+			if [[ $INPUT_ADDITIONAL_1 == 'ram' ]]; then
+
+				G_CONFIG_INJECT 'Dir::State[[:blank:]]' 'Dir::State "/tmp/apt";' $fp
+				G_CONFIG_INJECT 'Dir::State::extended_states[[:blank:]]' 'Dir::State::extended_states "/var/lib/apt/extended_states";' $fp
+				G_CONFIG_INJECT 'Dir::State::status[[:blank:]]' 'Dir::State::status "/var/lib/dpkg/status";' $fp
+				rm -Rf /var/lib/apt/{lists,mirrors,periodic,cdroms.list}
+
+			elif [[ $INPUT_ADDITIONAL_1 == 'disk' ]]; then
+
+				sed -i '/^Dir::State/d' $fp
+				[[ -d '/tmp/apt' ]] && rm -R /tmp/apt
+
+			fi
+
+		elif [[ $INPUT_MODE_VALUE == 'archives' ]]; then
+
+			if [[ $INPUT_ADDITIONAL_1 == 'ram' ]]; then
+
+				# Cache needs to be in RAM as well for this to work reliable
+				G_CONFIG_INJECT 'Dir::Cache[[:blank:]]' 'Dir::Cache "/tmp/apt";' $fp
+				G_CONFIG_INJECT 'Dir::Cache::archives[[:blank:]]' 'Dir::Cache::archives "/tmp/apt/archives";' $fp
+				[[ -d '/var/cache/apt' ]] && rm -R /var/cache/apt
+
+			elif [[ $INPUT_ADDITIONAL_1 == 'disk' ]]; then
+
+				G_CONFIG_INJECT 'Dir::Cache::archives[[:blank:]]' 'Dir::Cache::archives "/var/cache/apt/archives";' $fp
+				[[ -d '/tmp/apt/archives' ]] && rm -R /tmp/apt/archives
+
+			fi
+
+		fi
+
+		if [[ -f $fp ]]; then
+
+			# Remove drop-in config if it does not contain any setting
+			if ! grep -q '^Dir' $fp; then
+
+				rm $fp
+
+			# Re-create default cache dir if archives on disk while cache in RAM, since parent dirs are not auto-created
+			elif grep -q '/var/cache/apt/archives' $fp; then
+
+				mkdir -p /var/cache/apt/archives
+
+			fi
 
 		fi
 
@@ -523,8 +625,6 @@ _EOF_
 
 			done
 
-			unset group_array
-
 		else
 
 			Unknown_Input_Mode
@@ -664,11 +764,14 @@ It is highly recommended to change this password, ideally, it should be differen
 	#-----------------------------------------------------------------------------------
 	# Info
 	G_DIETPI-NOTIFY 3 "$G_PROGRAM_NAME" "$INPUT_MODE_NAME ($INPUT_MODE_VALUE)"
-
 	#-----------------------------------------------------------------------------------
 	if [[ $INPUT_MODE_NAME == 'apt-mirror' ]]; then
 
 		AptMirror_Main
+
+	elif [[ $INPUT_MODE_NAME == 'apt-cache' ]]; then
+
+		AptCache_Main
 
 	elif [[ $INPUT_MODE_NAME == 'useradd' ]]; then
 
@@ -700,7 +803,7 @@ It is highly recommended to change this password, ideally, it should be differen
 
 	elif [[ $INPUT_MODE_NAME == 'setpermissions' ]]; then
 
-		Setpermissions_Main &> /dev/null #as no file exist checks are done in bash (quicker to let the program report it missing), hide output
+		Setpermissions_Main &> /dev/null # As no file exist checks are done in bash (quicker to let the program report it missing), hide output
 
 	else
 
