@@ -1997,6 +1997,17 @@ opcache.max_accelerated_files=10000\nopcache.memory_consumption=128\nopcache.sav
 
 			fi
 			#-------------------------------------------------------------------------------
+			# Disable APT cache by default (leaves package download dir at disk by default)
+			if [[ ! -f '/etc/apt/apt.conf.d/99-dietpi-cache' ]]; then
+
+				G_WHIP_MSG '[ INFO ] Disabling APT cache\n
+We added new options to "dietpi-config" > "Advanced Options" > "APT Cache" to disable the APT cache or move cache, repo lists and/or package download dir to RAM.\n
+By default we disable the APT cache, which saves 50 - 100 MiB disk writes on each "apt-get update" call, but slows down "apt-cache" calls.\n
+Use "dietpi-config" to adjust these settings to your needs.'
+				/DietPi/dietpi/func/dietpi-set_software apt-cache cache disable
+
+			fi
+			#-------------------------------------------------------------------------------
 			# FFmpeg on RPi: Failsafe reinstall new APT package and mark priorly required libraries as auto + autoremove
 			if (( $G_HW_MODEL < 10 )) && command -v ffmpeg &> /dev/null; then
 
