@@ -9,6 +9,7 @@ Changes / Improvements / Optimisations:
 - DietPi-Explorer | Disabled opening of files in nano under select a file/folder mode.
 - DietPi-Drive_Manager | Added the option to change the I/O scheduler per drive. Many thanks to @Generator for pointing us onto this topic: https://github.com/MichaIng/DietPi/issues/2233
 - DietPi-Drive_Manager | Services are not stopped directly at start of this script any more. Instead this is done only on critical tasks, e.g. transferring of DietPi userdata, the swapfile or RootFS. Further increased navigation speed by re-running the drive detection loop only when affecting changes have been made, and, by several other code enhancements.
+- DietPi-Config | APT Cache: We added new options to "dietpi-config" > "Advanced Options" > "APT Cache" to disable the APT cache or move cache, repo lists and/or package download dir to RAM. By default we disable the APT cache, which saves 50 - 100 MiB disk writes on each "apt-get update" call, but slows down "apt-cache" calls: https://github.com/MichaIng/DietPi/issues/2840
 - DietPi-Software | Deluge: Lowered UMask (007 => 002) to allow read access from e.g. custom Samba shares without "dietpi" user. Many thanks to @radsb for reporting the limited access: https://dietpi.com/phpbb/viewtopic.php?f=11&t=5847
 - DietPi-Software | FFmpeg: On RPi, the new APT repo package will be installed, which now supports RPi hardware acceleration and is some subversion newer then the package hosted on dietpi.com: https://github.com/MichaIng/DietPi/issues/869#issuecomment-490047405
 - DietPi-Software | Gitea: Current stable v1.8.X will be installed now and existing instances will be upgraded during DietPi-Update. Many thanks to @msongz for implementing this: https://github.com/MichaIng/DietPi/pull/2881
